- Fixed bug #43510 (stream_get_meta_data() does not return same mode as used in fopen)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/branches/PHP_5_3@286613 c90b9560-bf6c-de11-be94-00142212c4b1